# xyz-scrcpy

./: .gitattributes  .gitignore  .requirements.txt  CHANGELOG.md  README.md  adb_resolve.py  install_xyz.py  installer.bat  installer.sh  patch_menu.py  pyproject.toml  repair_xyz.py  repair_xyz.sh  setup_vendor.py  start.bat  vendor_bootstrap.py  win_path_shim.py  xyz-scrcpy.cmd
.github/workflows/: ci.yml  inno-smoke.yml  release.yml
config/: config.json
docs/: DEV_AUDIT_REPORT.md  SMOKE_FROM_RELEASE.md  audio-mic-restart-risks-walkthrough.md  implementation-phases.md  launch-linux-strategy.md  plan-linux-installer-parity.md
packaging/windows/: create-desktop-shortcut.ps1  setup.iss  smoke-iscc.ps1
scripts/: clean_dev.ps1  clean_dev.sh  enable_conhost_vt.ps1
systemd/: scrcpy-auto.service
tests/: test_adb_resolve.py  test_adb_transport.py  test_alias_sync.py  test_audio_config.py  test_device_menu.py  test_device_tracker.py  test_install_tui.py  test_installer.py  test_installer_sh.py  test_launch_with_checks.py  test_marker.py  test_menu_adb_missing.py  test_menu_device_poll.py  test_menu_keys.py  test_menu_render_muted.py  test_menu_scrcpy_launch.py  test_monitor_behavior.py  test_path_manager.py  test_python_detector.py  test_rollback.py  test_shell_flows.py  test_shim_cmd.py  test_terminal_open.py  test_vendor_bootstrap.py
